--- a/PlainTextViewer.vcxproj
+++ b/PlainTextViewer.vcxproj
@@ -100,7 +100,6 @@
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalDependencies>kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comctl32.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;shlwapi.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <ModuleDefinitionFile>character-sets.def</ModuleDefinitionFile>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -117,7 +116,6 @@
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalDependencies>kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comctl32.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;shlwapi.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <ModuleDefinitionFile>character-sets.def</ModuleDefinitionFile>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -136,7 +134,6 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalDependencies>kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comctl32.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;shlwapi.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <ModuleDefinitionFile>character-sets.def</ModuleDefinitionFile>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -155,28 +152,20 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalDependencies>kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comctl32.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;shlwapi.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <ModuleDefinitionFile>character-sets.def</ModuleDefinitionFile>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <None Include="character-sets.def" />
+    <CustomBuild Include="character-sets.dll">
+      <FileType>Document</FileType>
+      <Command>copy "%(FullPath)" "$(TargetDir)"</Command>
+      <Outputs>$(TargetDir)%(Identity);%(Outputs)</Outputs>
+    </CustomBuild>
     <CustomBuild Include="PlainTextViewer.ini">
       <FileType>Document</FileType>
       <Command>copy "%(FullPath)" "$(TargetDir)"</Command>
       <Outputs>$(TargetDir)%(Identity);%(Outputs)</Outputs>
     </CustomBuild>
-    <CustomBuild Include="character-sets.c.xsl">
-      <FileType>Document</FileType>
-      <Command>msxsl "%(RootDir)%(Directory)character-sets.xml" "%(FullPath)" &gt; %(FileName).gen</Command>
-      <Outputs>%(FileName).gen;%(Outputs)</Outputs>
-    </CustomBuild>
-    <CustomBuild Include="character-sets.def.xsl">
-      <FileType>Document</FileType>
-      <Command>msxsl "%(RootDir)%(Directory)character-sets.xml" "%(FullPath)" &gt; %(FileName).gen</Command>
-      <Outputs>%(FileName).gen;%(Outputs)</Outputs>
-    </CustomBuild>
     <ResourceCompile Include="resource.rc" />
-    <ClCompile Include="character-sets.c" />
     <ClCompile Include="LineReader.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Transcoder.cpp" />
