Add support for UTF-7

--- a/resource.rc
+++ b/resource.rc
@@ -32,7 +32,8 @@ IDD_MAINWINDOW MENUEX
     {
         MENUITEM "&ANSI", IDM_CODEPAGE_ANSI, MFT_RADIOCHECK, 0
         MENUITEM "&OEM", IDM_CODEPAGE_OEM, MFT_RADIOCHECK, 0
-        MENUITEM "&UTF-8", IDM_CODEPAGE_UTF8, MFT_RADIOCHECK, 0
+        MENUITEM "UTF-&7", IDM_CODEPAGE_UTF7, MFT_RADIOCHECK, 0
+        MENUITEM "UTF-&8", IDM_CODEPAGE_UTF8, MFT_RADIOCHECK, 0
         MENUITEM "UTF-16 &LE", IDM_CODEPAGE_UCS2LE, MFT_RADIOCHECK, 0
         MENUITEM "UTF-16 &BE", IDM_CODEPAGE_UCS2BE, MFT_RADIOCHECK, 0
     }
