--- a/PlainTextViewer.ini
+++ b/PlainTextViewer.ini
@@ -31,15 +31,16 @@ Guid [-LI] = \{[[:xdigit:]]{8}(-[[:xdigit:]]{4}){3}-[[:xdigit:]]{12}\}
 
 [CodePages]
 \
-28591 = ISO-8859-1 (Latin 1)
-28592 = ISO-8859-2 (Latin 2)
-28593 = ISO-8859-3 (Latin 3)
-28594 = ISO-8859-4 (Baltic)
-28595 = ISO-8859-5 (Cyrillic)
-28596 = ISO-8859-6 (Arabic)
-28598 = ISO-8859-8 (Hebrew)
-28599 = ISO-8859-9 (Turkish)
-28605 = ISO-8859-15 (Latin 9)
+ISO-8859-1 (Latin 1)
+ISO-8859-2 (Latin 2)
+ISO-8859-3 (Latin 3)
+ISO-8859-4 (Baltic)
+ISO-8859-5 (Cyrillic)
+ISO-8859-6 (Arabic)
+ISO-8859-7 (Greek)
+ISO-8859-8 (Hebrew)
+ISO-8859-9 (Turkish)
+ISO-8859-15 (Latin 9)
 /
 1250 = Central Europe
 1251 = Cyrillic
